fixed appearance select on firefox

--- a/src/assets/sass/components/_selector.scss
+++ b/src/assets/sass/components/_selector.scss
@@ -25,6 +25,7 @@
     border-radius: 0;
     height: rem(34px);
     -webkit-appearance: none;
+    -moz-appearance: none;
     width: 100%;
     max-width: 100%;
     padding-left: $half-unit-layout;
